# nxt-interpreter

./: .gitignore  CMakeLists.txt  Environment.cpp  ExecutionContext.cpp  Interpreter.h  NetworkInterface.cpp  NetworkInterface.h  README.md  RXEAnalyzerMain.cpp  RXEFile.cpp  RXEFile.h  Robot.cpp  Robot.h  Simulation.cpp  System.cpp  VMMemory.h  about_simulation.md  main.cpp
doc/: about_simulation.md
doc/im/: axes.odg  rot.odg  rot2.odg
src/: NXTInterpeterMain.cpp  RXEAnalyzerMain.cpp
src/Environment/: Environment.cpp  Map.cpp  Map.h  Simulation.cpp  Simulation.h
src/Execution/: ExecutionContext.cpp  ExecutionContext.h  RXEFile.cpp  RXEFile.h
src/Interpreter/: AggregatedTypeIterators.cpp  AggregatedTypeIterators.h  Interpreter.cpp  Interpreter.h  InterpreterThread.cpp  InterpreterThread.h  InterpreterThread_CompareInstructions.cpp  InterpreterThread_ControlFlowInstructions.cpp  InterpreterThread_DataManipulationInstructions.cpp  InterpreterThread_LogicalInstructions.cpp  InterpreterThread_MathInstructions.cpp  InterpreterThread_SystemIOInstructions.cpp  Interpreter_CompareInstructions.cpp  Interpreter_ControlFlowInstructions.cpp  Interpreter_DataManipulationInstructions.cpp  Interpreter_LogicalInstructions.cpp  Interpreter_MathInstructions.cpp  Interpreter_SystemIOInstructions.cpp  OpcodeName.cpp  OpcodeName.h
src/Robot/: Constants.h  Motor.cpp  Robot.cpp  Robot.h  SingleRobotNetworkInterface.cpp  SingleRobotNetworkInterface.h
src/System/: Syscall.cpp  Syscall.h  System.cpp  System.h  VFile.cpp  VFile.h  VFileSystem.cpp  VFileSystem.h  VMMemory.cpp  VMMemory.h
src/utils/: Time.c  Time.cpp
tests/: commons.inc  comparisons.nbc  comparisons.rxe  file.nbc  file.nxc  file.rxe  simple.nbc  simple.rxe  simplecircle.nxc  simpleturn.nbc  simpleturn.rxe  simpleturn2.nbc  simpleturn2.rxe  testmap.map  thread.nbc  thread.rxe
